# SPM-bazel-demo

./: MODULE.bazel  Makefile  WORKSPACE  bazel-SPM-Bazel-Demo  bazel-bin  bazel-out  bazel-testlogs
Apps/MyCoolApp/Modules/MyCoolAppLibrary/: BUILD  Package.swift  deps_index.json
Apps/MyCoolApp/Modules/MyCoolAppLibrary/Sources/MyCoolAppLibrary/: MyCoolAppLibrary.swift
Apps/MyCoolApp/Modules/MyCoolAppLibrary/Tests/MyCoolAppLibraryTests/: MyCoolAppLibraryTests.swift
Modules/NotThatAmazingModule/: Package.swift
